Changelog
=========

1.0b11 (unreleased)
-------------------

- Comments are loaded in ajax after document page load.
  [silviot, thomasdesvenain]

- Fixed 'start' argument on comments getting.
  Added tests on batching argument.
  [thomasdesvenain]

- Avoids page reload when reviewer click on 'approve' or 'delete' comment.
  [thomasdesvenain]

- Fixed handling of non-ascii member data, like fullname and email.
  [hannosch]

1.0b10 (2010-10-15)
-------------------

- Fixed "global name 'WrongCaptchaCode' is not defined" if norobots captcha,
  but no other validation package is installed.
  [naro]

- Check if there is a 'pending' review state in the current workflow for
  comments instead of just checking for the 'comment_review_workflow'. This
  allows integrators to use a custom review workflow. This fixes
  http://dev.plone.org/plone/ticket/11184.
  [timo]

- fixed plone-it.po (improper language code ('en' instead of 'it'))
  [ajung]


1.0b9 (2010-10-07)
------------------

- Replace the can_manage method with a can_review method that checks the
  'Review comments' permission. This fixes
  http://dev.plone.org/plone/ticket/11145.
  [timo]

- Fix moderation actions (publish, delete) in the moderation view with virtual
  hosts. This is a replacement for http://dev.plone.org/plone/changeset/35608.
  [timo]

- Do not show two "login to add comments" buttons when there are no comments
  yet. This fixes http://plone.org/products/plone.app.discussion/issues/12.
  [timo]


1.0b8 (2010-10-04)
------------------

- Apply the comment viewlet template and styles to the new title-less comments.
  This might require integrators to apply their custom templates and styles.
  [timo]

- Remove title field from the comment form and replace it with an auto-generated
  title ("John Doe on Welcome to Plone").
  [timo]

- Fix http://dev.plone.org/plone/ticket/11098: "Comment byline shows login
  name, not full name"
  [kiorky]
