@@ -1,6 +1,10 @@
-<tal:block tal:define="isDiscussionAllowed view/is_discussion_allowed"
+<div tal:define="isDiscussionAllowed view/is_discussion_allowed"
            tal:condition="isDiscussionAllowed"
            i18n:domain="plone">
+    <tal:message condition="view/message">
+        <div id="info-message" style="display: none;" tal:content="view/message" />
+    </tal:message>
+
 <tal:block define="userHasReplyPermission view/can_reply;
                    isAnonymousDiscussionAllowed view/anonymous_discussion_allowed;
                    isAnon view/is_anonymous;
@@ -20,4 +24,4 @@
     </div>
 
 </tal:block>
-</tal:block>
+</div>
